--- a/overlay/boot/ramdisk/init.rc
+++ b/overlay/boot/ramdisk/init.rc
@@ -10,6 +10,7 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 import /init.trace.rc
+import /init.miui.rc
 import init.supersu.rc
 
 on early-init
