--- a/overlay/boot/ramdisk/init.rc
+++ b/overlay/boot/ramdisk/init.rc
@@ -11,7 +11,7 @@ import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 import /init.trace.rc
 import /init.miui.rc
-import init.supersu.rc
+#import init.supersu.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
